# python-dev-training

./: .gitignore
applications/teklif/api-python/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
applications/teklif/api-python/alembic/: env.py
applications/teklif/api-python/alembic/versions/: 20260428_0001_initial.py
applications/teklif/api-python/app/: config.py  main.py
applications/teklif/api-python/app/application/: cari_service.py  teklif_service.py  urun_service.py
applications/teklif/api-python/app/bootstrap/: container.py
applications/teklif/api-python/app/domain/: cari.py  repositories.py  teklif.py  (+1 more)
applications/teklif/api-python/tests/: test_health.py  test_teklif_domain.py
student-course-center/: .gitignore  PROMPT_FOR_CURSOR.md  README.md  pyproject.toml  requirements.txt
student-course-center/.cursor/rules/: student-course-center.mdc
student-course-center/database/: 00_create_database.sql  01_schema.sql  02_views.sql  03_procedures.sql  04_seed.sql  99_smoke_test.sql
student-course-center/docs/: DEVELOPMENT_PLAN.md  KULLANIM_KLAVUZU.md  prompt.txt
student-course-center/src/student_course_center/: __init__.py  __main__.py
student-course-center/src/student_course_center/application/: crud.py  faker_seed.py  services.py
student-course-center/src/student_course_center/console/: main.py
student-course-center/src/student_course_center/domain/: constants.py
student-course-center/src/student_course_center/infrastructure/: db.py
student-course-center/tests/: test_db_smoke.py  test_imports.py
(+857 files in other folders)
